[package]
name = "hmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
futures-util = "0.3.26"
indicatif = "0.17.3"
quick-xml = { version = "0.27.1", features = ["serialize"] }
reqwest = { version = "0.11.14", features = ["stream"] }
serde = "1.0.152"
surrealdb = { version = "1.0.0-beta.8", features = ["kv-mem"] }
tempfile = "3.4.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
zip = "0.6.4"
